--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@ Free (wo)man -son of -home
 Home of the son of a free man
 <p>
 Home of freedom
-
+<p>
+Karlsenheim Studios
+<p>
+Home of Creative Freedom
 </center>
 </body>
 </html>
