added social links

--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@ Free (wo)man -son of -home
 Home of the son of a free man
 <p>
 Home of freedom
-<p>
+<hr>
 Karlsenheim Studios
 <p>
 Home of Creative Freedom
+<hr>
+  <a href="https://www.youtube.com/channel/UCyomBnKyQOPMMebD1DClx6Q"><i class="fab fa-youtube"></i></a> 
+  <a href="https://www.instagram.com/karlsenheim_studios/"><i class="fab fa-instagram"></i></a> 
+  <a href="https://www.facebook.com/karlsenheim/"><i class="fab fa-facebook"></i></a> 
+  <a href="https://twitter.com/karlsenheim"><i class="fab fa-twitter"></i></a>
+  <a href="https://www.twitch.tv/karlsenheim_studios"><i class="fab fa-twitch"></i></a>
 </center>
 </body>
 </html>
