--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Home of Creative Freedom
 <hr>
   <a href="https://www.youtube.com/channel/UCyomBnKyQOPMMebD1DClx6Q"><i class="fab fa-youtube"></i></a> 
   <a href="https://www.instagram.com/karlsenheim_studios/"><i class="fab fa-instagram"></i></a> 
-  <a href="https://www.facebook.com/karlsenheim/"><i class="fab fa-facebook"></i></a> 
+  <a href="https://www.facebook.com/Karlsenheim-Studios-258421908411126//"><i class="fab fa-facebook"></i></a> 
   <a href="https://twitter.com/karlsenheim"><i class="fab fa-twitter"></i></a>
   <a href="https://www.twitch.tv/karlsenheim_studios"><i class="fab fa-twitch"></i></a>
 </center>
